Bug 164793 - Hatch angle is wrong when 'use anti-aliasing' is off
Summary: Hatch angle is wrong when 'use anti-aliasing' is off
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.3.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.8.0 target:25.2.1 target:24...
Keywords: bibisected, bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2025-01-21 21:14 UTC by Regina Henschel
Modified: 2025-01-31 17:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Hatch fill for testing (9.50 KB, application/vnd.oasis.opendocument.graphics)
2025-01-21 21:14 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2025-01-21 21:14:02 UTC
Created attachment 198661 [details]
Hatch fill for testing

Open attached file.
Go to Tools > Options > LibreOffice > View.
Turn 'Use anti-aliasing' off.
Error: When anti-aliasing is off, the hatch angle is not rendered as 90degree.

Turn 'Use anti-aliasing' on.
Now the hatch angle is rendered as 90degree.

I see the error in
Version: 7.3.0.0.beta1 (x64) / LibreOffice Community
Build ID: 436f14c25ec1847646b953cf13d0db4f7ca3be57
CPU threads: 32; OS: Windows 10.0 Build 26100; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

It was OK in
Version: 7.2.2.2 (x64) / LibreOffice Community
Build ID: 02b2acce88a210515b4a5bb2e46cbfb63fe97d56
CPU threads: 32; OS: Windows 10.0 Build 26100; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 1 raal 2025-01-23 18:16:53 UTC
No repro with Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9dd225ee8c45d6c944b9ce5578780d89612e9ffb
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 2 Saburo 2025-01-25 06:05:46 UTC
For some reason it doesn't happen anymore on Linux, but it still happens on Windows.

reproduce
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b9fd8cc18a9cd5cd4ae86b4256cf8786ea34ea89
CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

Version: 24.8.4.2 (X86_64) / LibreOffice Community
Build ID: bb3cfa12c7b1bf994ecc5649a80400d06cd71002
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Calc: threaded

Not reproduce
Version: 25.2.0.2 (X86_64) / LibreOffice Community
Build ID: 62af784cc06624122f17ee71c7cf13d906cbaed0
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Calc: threaded

bibisected with win64-7.3
first bad commit
source bc0ab08634f59e1a1814e575fe6ad5e50bf1aee1
Comment 3 raal 2025-01-25 08:08:16 UTC
(In reply to Saburo from comment #2)
> For some reason it doesn't happen anymore on Linux, but it still happens on
> Windows.
> 
> bibisected with win64-7.3
> first bad commit
> source bc0ab08634f59e1a1814e575fe6ad5e50bf1aee1

Thanks for bisecting. Adding CC to Mike Kaganski

https://git.libreoffice.org/core/+/bc0ab08634f59e1a1814e575fe6ad5e50bf1aee1%5E%21

Drop F_PI1800/F_PI18000, and unify deg2rad/rad2deg conversions
Comment 4 Mike Kaganski 2025-01-25 09:54:38 UTC
https://gerrit.libreoffice.org/c/core/+/180737
Comment 5 Commit Notification 2025-01-25 11:35:15 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/94f72a396b1e15e710163c37e175552c59048447

tdf#164793: fix misplaced rounding

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-01-25 14:17:31 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/4481e7e1fef47c72011b5de632ce9fce03fe0dcb

tdf#164793: fix misplaced rounding

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-01-25 14:17:34 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/138ab393a4a2129c5c704370699fa2e3fa622545

tdf#164793: fix misplaced rounding

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Regina Henschel 2025-01-26 14:36:48 UTC
It is OK now in Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 85c8901dc2710e91bccb64cd7d8068441f42f65b
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

Mike, that was really super fast :)