tdf#164793: fix misplaced rounding

Regression after commit bc0ab08634f59e1a1814e575fe6ad5e50bf1aee1,
where I confused what neede to be rounded.

Change-Id: Ib150ea1989ed7241747fe4a89bce051478a54bfc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180737
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 94f72a396b1e15e710163c37e175552c59048447)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180739
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>